Made Plugin Java 11 Compatible